deploy: e0202879c6f3adeafee963f1b210fc6854c90cf8

--- a/brands/index.html
+++ b/brands/index.html
@@ -403,6 +403,20 @@ John Boos & Co. are a butcher block manufacturer, known by the &ldquo;Boos Block
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/kamik/ class="link black dim">
+Kamik
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Kamik is a Canadian shoe manufacturer who continues to manufacture some of their lines in the USA and Canada, most notably their &ldquo;Heritage 1898&rdquo; women’s and men’s lines. Products that are US- or Canada-made are clearly marked in the product descriptions, however other products do not list their country of manufacture. Some are known to be made in India.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/knipex/ class="link black dim">
 Knipex
 </a>
@@ -719,20 +733,6 @@ Seki Edge
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Tweezers, shears, nail clippers, and other personal care products.
 In the United States, Seki Edge is distributed by Jatai .
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/sherrill-manufacturing/ class="link black dim">
-Sherrill Manufacturing
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Sherrill Manufacturing is the parent company of several brands listed below. They purchased the former Oneida Limited facilities, and continue making products in the USA.
 </div>
 </div>
 </div>
