--- a/origins/india/index.html
+++ b/origins/india/index.html
@@ -2,21 +2,21 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Shoes | madewhere</title>
+<title>india | madewhere</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
 <meta name=generator content="Hugo 0.92.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/categories/shoes/index.xml rel=alternate type=application/rss+xml title=madewhere>
-<link href=/categories/shoes/index.xml rel=feed type=application/rss+xml title=madewhere>
-<meta property="og:title" content="Shoes">
+<link href=/origins/india/index.xml rel=alternate type=application/rss+xml title=madewhere>
+<link href=/origins/india/index.xml rel=feed type=application/rss+xml title=madewhere>
+<meta property="og:title" content="india">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://madewhere.co/categories/shoes/">
-<meta itemprop=name content="Shoes">
+<meta property="og:url" content="https://madewhere.co/origins/india/">
+<meta itemprop=name content="india">
 <meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Shoes">
+<meta name=twitter:title content="india">
 <meta name=twitter:description content>
 <meta name=referrer content="no-referrer">
 <link rel="shortcut icon" type=image/png href=favicon.png>
@@ -49,7 +49,7 @@ Vendors
 </nav>
 <div class=tc-l>
 <h1 class=dn>
-Shoes
+india
 </h1>
 </div>
 </div>
@@ -72,82 +72,6 @@ Kamik
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Kamik is a Canadian shoe manufacturer who continues to manufacture some of their lines in the USA and Canada, most notably their &ldquo;Heritage 1898&rdquo; women’s and men’s lines. Products that are US- or Canada-made are clearly marked in the product descriptions, however other products do not list their country of manufacture. Some are known to be made in India.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/birkenstock/ class="link black dim">
-Birkenstock
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Birkenstock&rsquo;s well-known cork sole sandals—as well as many of their other shoes—are made in Germany. Other products have varying origins.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/red-wing/ class="link black dim">
-Red Wing
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Red Wing is a shoe manufacturer based in Minnesota. They offer a &ldquo;heritage&rdquo; line of shoes which are fully made in the USA. They also offer a &ldquo;work&rdquo; line of shoes and boots which are of varying origins.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/moonstar/ class="link black dim">
-MoonStar
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-MoonStar offers a wide variety of shoes, which are made in Japan.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/shoes-like-pottery/ class="link black dim">
-Shoes Like Pottery
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Shoes Like Pottery makes casual low and high top sneakers. As with all MoonStar sneakers, they are made in Japan.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Vendors</span>
-<h1 class="f3 near-black">
-<a href=/vendors/blue-owl/ class="link black dim">
-Blue Owl
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Blue Owl is a retailer which specializes in workwear, carrying a number of well made brands including a large number Japanese brands. Unfortunately not all of the brands they carry are responsibly made, so research each before buying.
-They also have a physical store in Seattle, WA.
 </div>
 </div>
 </div>
