--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@ A website dedicated to quality, fairly made goods.
 </a>
 </li>
 <li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/india/>
+<span class=ttc>india</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
 <a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/italy/>
 <span class=ttc>italy</span>
 </a>
@@ -287,6 +292,25 @@ Recent Brands
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=/brands/kamik/ class="color-inherit dim link">
+Kamik
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+Kamik is a Canadian shoe manufacturer who continues to manufacture some of their lines in the USA and Canada, most notably their &ldquo;Heritage 1898&rdquo; women’s and men’s lines. Products that are US- or Canada-made are clearly marked in the product descriptions, however other products do not list their country of manufacture. Some are known to be made in India.
+</div>
+<a href=/brands/kamik/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=/brands/naked-and-famous/ class="color-inherit dim link">
 Naked & Famous
 </a>
@@ -319,28 +343,14 @@ Raber is a Canadian glove manufacturer, specializing in leather gloves.
 </div>
 </article>
 </div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/wilcox/ class="color-inherit dim link">
-Wilcox
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Wilcox is a garden tool manufacturer, specializing in digging tools.
-</div>
-<a href=/brands/wilcox/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
 </section>
 <section class=w-100>
 <h1 class=f3>More</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/brands/wilcox/ class="link black dim">
+Wilcox
+</a>
+</h2>
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=/brands/felco/ class="link black dim">
 Felco
@@ -354,11 +364,6 @@ Marley's Monsters
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=/brands/lloydpans/ class="link black dim">
 LloydPans
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/weck/ class="link black dim">
-Weck
 </a>
 </h2>
 <a href=/brands/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All Brands</a>
