--- a/origins/index.html
+++ b/origins/index.html
@@ -128,6 +128,19 @@ Canada
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/kamik/ class="link black dim">
+Kamik
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Kamik is a Canadian shoe manufacturer who continues to manufacture some of their lines in the USA and Canada, most notably their &ldquo;Heritage 1898&rdquo; women’s and men’s lines. Products that are US- or Canada-made are clearly marked in the product descriptions, however other products do not list their country of manufacture. Some are known to be made in India.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/naked-and-famous/ class="link black dim">
 Naked & Famous
 </a>
@@ -644,6 +657,24 @@ Oral-B manufactures a number of their toothbrush lines in Europe; any that fall 
 </div>
 </div>
 <h2 class=f1>
+<a href=/origins/india/ class="link blue hover-black">
+india
+</a>
+</h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/kamik/ class="link black dim">
+Kamik
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Kamik is a Canadian shoe manufacturer who continues to manufacture some of their lines in the USA and Canada, most notably their &ldquo;Heritage 1898&rdquo; women’s and men’s lines. Products that are US- or Canada-made are clearly marked in the product descriptions, however other products do not list their country of manufacture. Some are known to be made in India.
+</div>
+</div>
+</div>
+<h2 class=f1>
 <a href=/origins/italy/ class="link blue hover-black">
 italy
 </a>
@@ -985,6 +1016,19 @@ Zojirushi is probably best known for their rice cookers, but they make a conside
 USA
 </a>
 </h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/kamik/ class="link black dim">
+Kamik
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Kamik is a Canadian shoe manufacturer who continues to manufacture some of their lines in the USA and Canada, most notably their &ldquo;Heritage 1898&rdquo; women’s and men’s lines. Products that are US- or Canada-made are clearly marked in the product descriptions, however other products do not list their country of manufacture. Some are known to be made in India.
+</div>
+</div>
+</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
