--- a/origins/usa/index.html
+++ b/origins/usa/index.html
@@ -69,6 +69,21 @@ Products made in the United States of America.
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/kamik/ class="link black dim">
+Kamik
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Kamik is a Canadian shoe manufacturer who continues to manufacture some of their lines in the USA and Canada, most notably their &ldquo;Heritage 1898&rdquo; women’s and men’s lines. Products that are US- or Canada-made are clearly marked in the product descriptions, however other products do not list their country of manufacture. Some are known to be made in India.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/wilcox/ class="link black dim">
 Wilcox
 </a>
